# spartan-fri

./: .gitignore  Cargo.toml  README.md
evm_verifier/: Cargo.toml  package.json  pnpm-lock.yaml
evm_verifier/contracts/: MerkleVerifier.sol  MultiLinearFRIVerifier.sol  SpartanSCVerifier.sol
evm_verifier/scripts/: bench_gas.ts  bench_merkle_verifier.ts
evm_verifier/src/: lib.rs
spartan_fri/: Cargo.toml
spartan_fri/benches/: prove.rs
spartan_fri/src/: lib.rs  ml_poly.rs  prover.rs  r1cs.rs  sc_phase_1.rs  sc_phase_2.rs  transcript.rs  verifier.rs
spartan_fri/src/fri/: fft.rs  fri.rs  fri_prover.rs  fri_verifier.rs  mod.rs  sparse_fri.rs  sparse_unipoly.rs  tree.rs  unipoly.rs  utils.rs
spartan_fri/src/r1cs/: r1cs.rs
spartan_fri/src/spartan/: assistant.rs  indexer.rs  mod.rs  prover.rs  utils.rs  verifier.rs
spartan_fri/src/spartan/polynomial/: eq_poly.rs  ml_poly.rs  mod.rs  sparse_ml_poly.rs
spartan_fri/src/spartan/sumcheck/: mod.rs  sc_phase_1.rs  sc_phase_2.rs  unipoly.rs
