[package]
name = "evm_verifier"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.4", features = ["rustls"]}
tokio = { version = "1.23.0", features = ["macros"] }
eyre = "0.6.8"
serde = "1.0.162"
spartan_fri = { path = "../spartan_fri" }
pasta_curves = "0.4.1"
serde_json = "1.0.96"
ark-std = "0.4.0"

