[package]
name = "spartan_fri"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff =  "0.13.0"
pasta_curves = { version = "0.5.1", features = ["serde"] }
merlin = "3.0.0"
sha3 = "0.10.7"
keccak = "0.1.3"
ark-std = { version = "0.4.0", features = ["print-trace"] }
bincode = "1.3.3"
serde = { version = "1.0.152", features = ["derive"] }

